@@ -42,3 +42,5 @@ libevil_la_CPPFLAGS = -DEFL_EVIL_BUILD -D_WIN32_WCE=0x0420
 libevil_la_CFLAGS = @win32_cflags@
 libevil_la_LIBADD = @win32_libs@ $(EFL_MPATROL_LIBS)
 libevil_la_LDFLAGS = -no-undefined -Wl,--enable-auto-import -version-info @version_info@
+
+EXTRA_DIST = evil_fnmatch_private.h
